--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,13 +113,13 @@ section {
 
 /* Tag a Hover */
 
-a {
+/* a {
   transition: 500ms linear;
 }
 
 a:hover {
   transform: scale(1.1);
-}
+} */
 
 .card {
    transition: 500ms linear;
